...
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">Ввод показаний счетчиков</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="ac_label_login">Вход для жильцов</string>
    <string name="error_invalid_account_id">This account is incorrect</string>
...
